--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-chatbox></app-chatbox>
-<script src="runtime.675e1d5bef522fbf.js" type="module"></script><script src="polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="main.1b655e5edc08d13a.js" type="module"></script>
+<script src="https://mrdumb23.github.io/dumbProject/runtime.675e1d5bef522fbf.js" type="module"></script><script src="polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="main.1b655e5edc08d13a.js" type="module"></script>
 
 
 </body></html>
