--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>ChatApp</title>
-  <base href="/">
+  <base href="chatbot-project">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
-  <app-chatbox></app-chatbox>
-<script src="/js/runtime.675e1d5bef522fbf.js" type="module"></script><script src="/js/polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="/js/main.1b655e5edc08d13a.js" type="module"></script>
-
+  <app-chatbot></app-chatbot>
+<script src="runtime.675e1d5bef522fbf.js" type="module"></script><script src="polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="main.1b655e5edc08d13a.js" type="module"></script>
 
 </body></html>
-
