--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>ChatApp</title>
-  <base href="chatbot-project">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-chatbox></app-chatbox>
-<script src="runtime.675e1d5bef522fbf.js" type="module"></script><script src="polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="main.2421f5b66581b492.js" type="module"></script>
+<script src="runtime.675e1d5bef522fbf.js" type="module"></script><script src="polyfills.a6ca2151a6184a7a.js" type="module"></script><script src="main.8cb19b591b97f489.js" type="module"></script>
 
 </body></html>
